--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -31,7 +31,7 @@
                         <label for="your_password" class="text-black"> <mdb-icon fas icon="lock" class="text-black"></mdb-icon> Your password</label>
                     </div>
                     <div class="text-center">
-                        <mdb-checkbox [default]="true">Remember me</mdb-checkbox>
+                        <!-- <mdb-checkbox [default]="true">Remember me</mdb-checkbox> -->
                       </div>
                     <div class="text-center mt-2">
                         <button mdbBtn color="info" (click)="Login()" mdbWavesEffect>Log In</button>
