--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,9 +52,9 @@
                 </li>
             </ul>
             <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item waves-light" mdbWavesEffect>
+                <!-- <li class="nav-item waves-light" mdbWavesEffect>
                     <a class="nav-link" mdbTooltip="Search an item" placement="bottom"><mdb-icon fas icon="search"></mdb-icon></a>
-                </li>
+                </li> -->
                 <li class="nav-item waves-light" mdbWavesEffect>
                     <a class="nav-link" (click)="MyProfileClicked()" mdbTooltip="My Account" placement="bottom"><mdb-icon fas icon="users"></mdb-icon></a>
                 </li>
