--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -82,7 +82,7 @@
               </tr>
               <tr mdbTableCol>
                 <td>Asstimated Dilivey Date</td>
-                <td>: 2020-Nov-29</td>
+                <td>{{this.getShowArray.date | date}}</td>
              </tr>
               </tbody>
             </table>
