--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -55,7 +55,7 @@
                 </tr>
                 <tr mdbTableCol>
                     <td>Delivery Date</td>
-                    <td>{{": "+ date}}</td>
+                    <td>{{" "+ date1 | date}}</td>
                     <td></td>
                 </tr>
                 <tr mdbTableCol>
