image path | size for add product

--- a/src/app/seller/edit-products/edit-products.component.html
+++ b/src/app/seller/edit-products/edit-products.component.html
@@ -64,8 +64,8 @@
 
                 </div>
 
-                <div>
-                        <mdb-card-img
+                <div  class="col-md-4">
+                        <mdb-card-img class="d-block w-100 py-2"
                         src={{product.imgName}}
                         >
                     </mdb-card-img>
