changes Feb 9 (product img & seller login)

--- a/src/app/admin/user-chart/user-delivers/user-delivers.component.html
+++ b/src/app/admin/user-chart/user-delivers/user-delivers.component.html
@@ -39,13 +39,13 @@
 
 <div mdbModal #frame="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
   aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm modal-notify modal-info" role="document">
+  <div class="modal-dialog modal-md modal-notify modal-info" role="document">
     <!--Content-->
-    <div class="modal-content text-center">
+    <div class="modal-content">
       <!--Header-->
       <div class="modal-header d-flex justify-content-center">
         <p class="heading">Deliver Details</p>
-      </div>
+      </div>   
 
       <!--Body-->
       <div class="modal-body">
