--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -34,12 +34,22 @@
     </div>
 
 <section class="text-center">
+    <div class="container">
+        <div class="row banner">
+            <div class="col-md-2">
+                <img class="d-block w-100" src="https://i.pinimg.com/originals/14/d5/06/14d5066da138b0f91f082f2ae60d6169.gif" alt="First slide">
+              </div>
+          <div class="col-md-10">
+            <h2 class="h2 font-weight-bold h2 py-3">Now Let's Get shopping</h2>
+            <!--Section description-->
+            <p class="grey-text pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam
+                iure provident voluptate esse quasi,
+                veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+          </div>
+        </div>
+      </div>
     <!--Section heading-->
-    <h2 class="h2 font-weight-bold h2 py-3">Now Let's Get shopping</h2>
-    <!--Section description-->
-    <p class="grey-text pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam
-        iure provident voluptate esse quasi,
-        veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+   
 </section>
 
 <!-- Electronic Devices test -->
