--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -56,7 +56,7 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
           <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold">Brand name</h6>
+          <h6 class="text-uppercase font-weight-bold">Ideal</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
 
@@ -70,17 +70,17 @@
           <h6 class="text-uppercase font-weight-bold">Products</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <a href="#!">Shop by Category</a>
+            <a href="/products">Shop by Category</a>
           </p>
           <p>
             <a href="#!">Offers</a>
           </p>
-          <p>
+          <!-- <p>
             <a href="#!">Best sellers</a>
-          </p>
-          <p>
+          </p> -->
+          <!-- <p>
             <a href="#!">Order Tracking</a>
-          </p>
+          </p> -->
 
         </div>
         <!-- Grid column -->
@@ -92,10 +92,10 @@
           <h6 class="text-uppercase font-weight-bold">Useful links</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <a href="#!">Your Account</a>
+            <a href="/myProfile">Your Account</a>
           </p>
           <p>
-            <a href="#!">Become a Seller</a>
+            <a href="/sellerRegistration">Become a Seller</a>
           </p>
           <p>
             <a href="#!">Delivery Rates</a>
