--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -50,7 +50,7 @@
                 </tr>
                 <tr mdbTableCol>
                     <td>Total Price</td>
-                    <td>: Rs:{{""+tatal}}/=</td>
+                    <td>: Rs:{{""+tatal}}/= (+ delivery charge)</td>
                     <td></td>
                 </tr>
                 <tr mdbTableCol>
